---------
changelog
---------

[9/12/2025] added a navbar and hit counter
            omv now has antivirus and downloads an omv removal tool

[8/26/2025] site got indexed by google
            working on big omv update

[8/14/2025] requested site indexing by google
            hopefully I dont get DMCA'ed for the games

[8/12/2025] added n-gon because landgreen's site got blocked
            moved gunsim and n-gun to misc cause they are abandoned
            renamed ravenfield to rf and slowroads to sr in order to circumvent blocks

[4/4/2025]  revamped all of the assets to better fit the new site structure
            added a personal page and projects page to make website more formal
            the pages are placeholders for now; i need to research how to make them

[3/25/2025] created changelog and 404 page
            fixed some site structure formatting to be a bit more standard
            fixed some errors with omv

[3/24/2025] added slowroads and nzp to the vg directory


----------
todo/ideas
----------

xash3d (https://github.com/x8BitRain/webXash)
add dropdowns for header that stay within navbar horizontally


--------
pastebin
--------

<!DOCTYPE html>
<html lang="en">
    <head>
        <title>static main page</title>
        <link rel="stylesheet" href="https://hrishiky.github.io/assets/main/css/style.css">
        <script src="https://hrishiky.github.io/assets/main/js/main.js" defer></script>
    </head>
    
    <body onload="fillPlaceholders();">
        <nav id="nav-placeholder">
        </nav>

        <footer id="footer-placeholder"> 
        </footer>
    </body>
</html>