@@ -1,3 +1,4 @@
 <h1><a href="https://hrishiky.github.io">hrishiky.github.io</a></h1>
-<p><a href="https://hrishiky.github.io/static/projects/index.html">projects</a></p>
-<p><a href="https://hrishiky.github.io/static/index.html">static</a></p>
+<span><p><a href="https://hrishiky.github.io/static/projects/index.html">projects</a></p></span>
+<span><p><a href="https://hrishiky.github.io/static/index.html">static</a></p></span>
+<span class="right-align"><p><a href="https://hrishiky.github.io/static/misc/stats/index.html">stats</a></p></span>
