@@ -50,7 +50,6 @@
                 <p>[ <a href="./stats/index.html">./stats/index.html</a> ]</p>
                 <ul>
                     <li>website statistics</li>
-                    <li>currently has website total hit counter</li>
                 </ul>
             </div>
         </div>
