@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>[INSERT TITLE]</title>
+        <title>stats main page</title>
         <link rel="stylesheet" href="https://hrishiky.github.io/assets/main/css/style.css">
         <script src="https://hrishiky.github.io/assets/main/js/main.js" defer></script>
     </head>
@@ -12,8 +12,15 @@
 
         <h1>stats main page</h1>
 
-        <span><p>website hits:</p><a class="counter" href="https://hits.sh/hrishiky.github.io/"><img src="https://hits.sh/hrishiky.github.io.svg"/></a></span>
-        <span><p>omv hits:</p><a class="counter" href="https://hits.sh/hrishiky.github.io/static/omv/virus.html/">hits.sh</a></span>
+        <p>website hits:</p>
+        <a href="https://hits.sh/hrishiky.github.io/"><img src="https://hits.sh/hrishiky.github.io.svg"/></a>
+        <a href="https://hits.sh/hrishiky.github.io/">hits.sh</a>
+        
+        <p>omv hits:</p>
+        <a href="https://hits.sh/hrishiky.github.io/static/omv/virus.html/">hits.sh</a>
+
+        <p>unique hits:</p>
+        <a href="https://hits.sh/hrishiky.github.io/static/misc/stats/index.html/">hits.sh</a>
 
         <footer id="footer-placeholder">
         </footer>
